k3s/dashboard.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - host: kube.local
    http:
      paths:
      - path: /kube-dash
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
